# intro-embedded-rust-microbit-v2

./: Readme.md  book.toml
examples_rust/bare_metal/: Cargo.toml  Embed.toml
examples_rust/bare_metal/src/: main.rs
examples_rust/example_project/: Cargo.toml
examples_rust/example_project/.cargo/: config
examples_rust/example_project/src/: main.rs
examples_rust/excercise1/: Cargo.toml
examples_rust/mic_test/: Cargo.toml
examples_rust/my_example/: Cargo.toml
examples_rust/my_example/src/: main.rs
examples_rust/pwm_blinky/: Cargo.toml
examples_rust/pwm_blinky/.cargo/: config.toml
examples_rust/pwm_blinky/src/: main.rs
examples_rust/radio_reciver/: Cargo.toml  notes.md  rust-gpio-degrade.md
examples_rust/radio_reciver/src/: main.rs
examples_rust/radio_test/: Cargo.toml  Embed.toml
examples_rust/radio_test/src/: main.rs
examples_rust/serial_test/: Cargo.toml  Embed.toml
examples_rust/serial_test/.cargo/: config
examples_rust/serial_test/src/: main.rs
examples_rust/speaker_test/: Embed.toml  memory.x
examples_rust/speaker_test/.cargo/: config
examples_rust/speaker_test/src/: main.rs
src/: SUMMARY.md  demystify.md  introduction.md  preparations.md  project.md  references.md
src/exercises/: blinky.md  display.md  intro.md  logging.md  mic.md  multiplayer.md  radio.md  reciving.md  serial.md  snake.md  speaker.md  walki_talkie.md
src/intro/: hardware.md  install.md  sponsors.md
src/start/: building_flashing.md  explanation.md  explination.md  project.md
test/: style.css
theme/: index.hbs
theme/css/: general.css  variables.css
(+2 files in other folders)
