[package]
name = "example_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "*", features = ["cortex-m"] }

