[package]
name = "blinky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
nrf52833-hal = { version = "*", features = ["rt"] }
nb = "1.0.0"
