[package]
name = "blinky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "*", features = ["critical-section-single-core"]}
cortex-m-rt = "*"
nrf52833-hal = { version = "*", features = ["rt"] }
nb = "1.0.0"
microbit-v2 = "*"
defmt-rtt = "0.4"
defmt = "0.3.1"
panic-halt = "0.2.0"
embedded-hal = "*"
